[package]
name = "matrix-mqtt-bridge"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = "0.9.0"
kagiyama = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
matrix-sdk = { version = "0.5.0", default-features = false, features = ["e2e-encryption", "native-tls"] }
mqtt-channel-client = { version = "0.4.0", features = ["metrics"] }
paho-mqtt = "0.11.1"
prometheus-client = "0.19.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.19.2", features = ["full"] }
