[package]
name = "matrix-mqtt-bridge"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
lazy_static = "1.4"
log = "0.4"
matrix-client-boilerplate = { git = "https://github.com/DanNixon/matrix-client-boilerplate", tag = "v0.2.0" }
matrix-sdk = "0.6.2"
mqtt-channel-client = { version = "0.5.0", features = ["metrics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.24.1"
strum_macros = "0.24.3"
tracing-subscriber = "0.3.15"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "signal"] }
kagiyama = "0.3.0"
